# Paula_Chaves_Gabriela_Morera_Taller1

./: README.MD  pyproject.toml
codigo/: cuaderno_des.ipynb  cuaderno_exp.ipynb  datos_cundinamarca.json
