[project]
name = "taller-uno-sp"
version = "0.0.1"
description = "Haremos un analisis descriptivo sobre el departamento de Cundinamarca atraves de la API de Datos Abiertos"
authors = [
    {name = "Gabriela Morera Paula Chaves"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
